# Autotrader

./: .coverage  .coveragerc  .dvcignore  .env.example  .env.lightweight  .env.production.template  .env.template  .gitattributes  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .safety-policy.yml  .secrets.baseline  AGENTIC_CUMULATIVE_TRAINING_INTEGRATION.md  AGENTIC_ROADMAP_QUICK_REF.md  AGENTIC_SYSTEM_VALIDATION_PLAN.md  AGENT_ARCHITECTURE_REQUIREMENTS.md  AGENT_IS_LEARNING_PROOF.md  ALERTING_DRIFT_COMPLETE.md  ALERT_ROUTING_READY.md  ALPACA_INTEGRATION_COMPLETE.md  ANALYSIS_INDEX.md  API_WIRING_COMPLETE.md  ARCHITECTURE.md  AUTOMATION_SETUP_COMPLETE.md  AUTONOMOUS_AGENT_DESIGN.md  BASELINE_COMPARATORS_COMPLETE.md  BROKER_INTEGRATION_COMPLETE.md  BUGFIXES_OCT21.md  CANADIAN_SETUP_COMPLETE.md  CANADIAN_STACK_COMPLETE.md  CLI_GUIDE.md  CLI_IMPLEMENTATION_SUCCESS.md  CLI_QUICK_REF.md  CLI_REFERENCE.md  COLLISION_TEST_RESULTS.md  COMPLIANCE_MONITORING_ACHIEVEMENT_SUMMARY.md  COMPLIANCE_MONITORING_IMPLEMENTATION_SUMMARY.md  COMPLIANCE_MONITORING_IMPORT_FIX.md  COMPLIANCE_MONITORING_QUICKREF.md  (+248 more)
.devcontainer/: devcontainer.json
.dvc/: config
.github/: branch-protection.md  copilot-instructions.md  dependabot.yml
artifacts/: artifact_secret.key  config_metrics.json  config_snapshot.json  dashboard.html  dashboard.md
autotrader/: __init__.py
autotrader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
autotrader_live_dashboard/: README.md  dashboard_server.py  metrics_client.py
backtest/: baseline_strategies.py  extended_metrics.py  harness.py  monte_carlo.py
ci/: github-actions.yml  semgrep.yml
config/: phase3.yaml
configs/: active_pennies.csv  active_pennies.txt  agents.yaml  alert_rules.yaml  alert_rules_schema.json  alert_thresholds.yaml  alerts.example.yaml  alerts.yaml  alloy-config.river  canadian_margin.yaml  canadian_tfsa.yaml  crypto_strategy.yaml  crypto_strategy_collision_test.yaml  crypto_strategy_multimag_sweep.yaml  example.yaml  grafana_cloud.example.yaml  grafana_cloud.yaml  ibkr_config.json  intelligent_exits.yaml  live_alpha_weights.json  live_trading_adjustments.yaml  llm.yaml  llm_enhanced.yaml  llm_models.yaml  llm_v2.yaml  metrics_registry.yaml  my_paper_config.yaml  observability.yaml  output_schema.json  paper_trading.yaml  paper_trading_adjustments.yaml  pennyhunter.yaml  pennyhunter_experiment_gap10_vol2_4_cooldown.yaml  pennyhunter_experiment_gap10_vol2_4_cooldown_confirmed.yaml  pennyhunter_experiment_gap10_vol2_4_cooldown_confirmed_v2.yaml  pennyhunter_experiment_gap10_vol2_5.yaml  pennyhunter_experiment_gap10_vol2_5_cooldown.yaml  pennyhunter_experiment_gap9_vol2.yaml  ten_tokens.yaml  test_comparison.yaml  (+7 more)
dashboard/: ALERT_COMPONENTS.md  index.html  package-lock.json  package.json
docs/: 6_YEAR_BACKTEST_RESULTS.md  AGENTIC_ARCHITECTURE.md  AGENTIC_SYSTEM_VALIDATION_PLAN.md  AGENTIC_TRAINING_ROADMAP.md  AGENTIC_V2_ARCHITECTURE.md  AGENT_WEIGHTING_SYSTEM.md  ALERTING_V2_GUIDE.md  ALERT_API.md  ALERT_ENGINE_QUICK_START.md  ANALYSIS_INDEX.md  API_KEYS_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_RISKS.md  BACKTEST_EXTENDED_METRICS.md  BASELINE_STRATEGIES.md  BASELINE_STRATEGIES_QUICK_REF.md  BOUNCEHUNTER_GUIDE.md  BROKER_INTEGRATION.md  CANADIAN_BROKERS.md  CANADIAN_MIGRATION_COMPLETE.md  CI_GATING_SETUP.md  CLI_BACKTEST_GUIDE.md  CONFIDENCE_REPRESENTATION_STANDARD.md  DOCKER_SECURITY.md  DOCUMENTATION_INDEX.md  DOC_MAINTENANCE.md  DRIFT_MONITORING.md  DRIFT_MONITORING_GUIDE.md  DRIFT_MONITORING_IMPLEMENTATION.md  ETHERSCAN_V2_MIGRATION.md  EXPANDED_ALERT_ENGINE.md  EXPERIMENT_TRACKING.md  EXPERIMENT_TRACKING_QUICK_REF.md  EXTENDED_BACKTEST_METRICS.md  EXTENDED_METRICS_QUICK_REF.md  FEATURE_CATALOG.md  FEATURE_STATUS.md  FEATURE_STORE_IMPLEMENTATION.md  FEATURE_VALIDATION_GUIDE.md  FEATURE_VALIDATION_IMPLEMENTATION.md  (+72 more)
examples/: README.md  baseline_strategies_example.py  broker_example.py  delta_explainability_example.py  enhanced_reliability_example.py  example_drift_monitoring.py  example_strategy_plugin.py  expanded_alert_engine_demo.py  experiment_tracking_example.py  extended_backtest_example.py  feature_store_example.py  feature_validation_example.py  integrated_monitoring_example.py  microstructure_alerts.py  microstructure_backtest.py  microstructure_live.py  observability_example.py  orderflow_example.py  phase2_example.py  red_team_tests.py  regime_correlation_example.py  reliability_example.py  test_scan.yaml  twitter_example.py
infra/: docker-compose.yml  prometheus.yml
models/: bc_best.pth  bc_policy_20251030_120936.pth  bc_policy_20251030_133123.pth  bc_policy_20251030_140320.pth  bc_policy_20251030_144214.pth  bc_policy_20251030_154059.pth  bc_policy_20251030_164054.pth
notebooks/: hidden_gem_scanner.ipynb
pipeline/: __init__.py  (+2 more)
(+5055 files in other folders)
