[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrader"
version = "0.1.0"
description = "AutoTrader - Cryptocurrency Trading Bot"
requires-python = ">=3.11"

[project.scripts]
autotrader-backtest = "pipeline.cli_backtest:cli_main"
autotrader-backtest-harness = "backtest.harness:main"
autotrader-scan = "src.cli.main:cli_main"

[project.entry-points."autotrader.strategies"]
default = "src.core.pipeline:HiddenGemScanner"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "pipeline*", "backtest*"]
namespaces = false

[tool.pytest.ini_options]
addopts = "-q --maxfail=1"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true

[tool.coverage.html]
show_contexts = true
