[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrader"
version = "0.1.0"
description = "AutoTrader - Cryptocurrency Trading Bot"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=2.3.0,<3.0",
    "pandas>=2.2.3,<3.0",
    "ccxt>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "aiohttp>=3.8.0",
    "prometheus-client>=0.17.0",
    "pyyaml>=6.0",
    "mlflow>=2.16.0",
    "prefect>=2.19.0",
    "wandb>=0.17.0",
    "dvc[s3]>=3.50.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
microstructure = [
    "ccxt[async]>=4.0.0",  # WebSocket support via ccxt.pro
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",  # For testing FastAPI endpoints
]
bouncehunter = [
    "yfinance>=0.2.40",
    "scikit-learn>=1.7.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
]

[project.scripts]
autotrader-backtest = "pipeline.cli_backtest:cli_main"
autotrader-backtest-harness = "backtest.harness:main"
autotrader-scan = "src.cli.main:cli_main"
autotrader-bouncehunter = "src.bouncehunter.cli:main"
autotrader-telegram-bot = "src.bouncehunter.telegram_cli:main"
autotrader-metrics = "src.services.metrics_server:main"

[project.entry-points."autotrader.strategies"]
default = "src.core.pipeline:HiddenGemScanner"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "pipeline*", "backtest*", "autotrader*"]
namespaces = false

[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["tests/", "scripts/demo/", "src/legacy/"]
